--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,12 +20,11 @@ nav {
   position: absolute;
   z-index: 2000;
   position: fixed;
-  /* background-color: #fff; */
   text-transform: uppercase;
 }
 
 nav .logo {
-  background-image: url("../images/logo-1.svg");
+  background-image: url("../images/STATIC_LOGO2-01.svg");
   background-size: 100% 75%;
   height: 100px;
   border: 1px solid grey;
@@ -39,18 +38,16 @@ nav .logo {
   border: 1px solid grey;
   padding: 6px;
   color: #000;
-  /* border-radius: 4px; */
   border-bottom: 0;
   z-index: 1000;
   cursor: pointer;
   display: block;
-  /* margin-bottom: 10px; */
   min-height: 23px;
   background-color: #fff;
   text-decoration: none;
 }
 
-nav a:last-child, .content-nav a:last-child, .back:last-child, .tab:last-child, .content-nav .tab:last-child {
+nav a:last-child, a.shop, .content-nav a:last-child, .back:last-child, .tab:last-child, .content-nav .tab:last-child {
   border-bottom: 1px solid grey;
 }
 
@@ -157,7 +154,7 @@ input[type=checkbox] {
 }
 
 /* style svg caret*/
-svg {
+.tab svg {
   height: 10px;
   width: 10px;
   position: absolute;
@@ -235,8 +232,15 @@ svg {
 .tooltip {
   position: relative;
   display: inline-block;
-  border-top: 1px solid grey;
   width: 100%;
+  top: -9px;
+}
+
+#text_to_copy {
+  position: absolute;
+  top: 17px;
+  left: 13px;
+  opacity: 0;
 }
 
 .tooltip .tooltiptext {
@@ -249,10 +253,13 @@ svg {
   padding: 5px;
   position: absolute;
   z-index: 1;
-  bottom: 150%;
-  margin-left: -157px;
+  bottom: 100%;
+  margin-left: 17px;
   opacity: 0;
   transition: opacity 0.3s;
+  text-transform: none;
+  font-family: sans-serif;
+  font-size: larger;
 }
 
 .tooltip .tooltiptext::after {
@@ -271,14 +278,14 @@ svg {
   opacity: 1;
 }
 
-.cv-iframe {
-  width: 75vw;
-  height: 100vh;
+#email-text {
+  width: 180px;
+  padding: 1px;
 }
 
-iframe {
-  width: 100%;
-  height: 100%;
+object {
+  width: 75vw;
+  height: 100vh;
 }
 
 footer {
@@ -304,21 +311,30 @@ footer {
     margin: auto;
   }
 
-  .cv-iframe {
-    width: 96vw;
+  object {
+    width: 95vw;
+    height: auto;
+  } 
+
+  /* .cv-iframe {
+    overflow: hidden;
+    padding-top: 100%;
+    position: relative;
   }
+  
+  .cv-iframe iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+  } */
 
   .tooltip{
     text-align: right;
   }
 
-}
+  #text_to_copy {
+    left: 184px;
+  }
 
-@media not all and (min-resolution:.001dpcm) { 
-  @media {
-    #copy_button, #text_to_copy {
-      color: #000!important;
-      background: linear-gradient(#D8D8D8, #D1D1D1, #BABABA)!important;
-      padding: 1px 7px 2px;
-    }
-  }}
+}
